--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "server": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
-    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
+    "nodemon": "^1.14.11",
     "webpack": "^3.10.0"
   }
 }
